# SmartCargo-AIPA

./: Dockerfile  README.md  ai_helper.py  app.js  config.js  config.py  database.sql  index.html  main.py  models.py  pyproject.toml  requirements.txt  roles.py  rules.py  storage.py  terms.html
backend/: __init__.py  ai_helper.py  database.py  main.py  models.py  roles.py  rules.py  storage.py  utils.py
config/: constants.py  env_keys.py  price_constants.py
db/models/: Reports.py  Shipments.py  Transactions.py  Users.py  db_setup.py
frontend/: index.html  scripts.js
requirements/standards/: validation_codes.py
src/api/: endpoints.py
src/config/: env_keys.py
src/legal/: guardrails.py
src/logic/: ia_validator.py  measurement.py  pallet_validator.py  reporting.py  scpam.py  temp_validator.py
src/requirements/legal/: guardrails.py
static/: scripts.js  styles.css
