[tool.poetry]
name = "smartcargo-aipa"
version = "0.1.0"
description = "Backend SmartCargo-AIPA"
authors = ["Maykel Rodriguez <maykel75122805321@gmail.com>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.3"
sqlalchemy = "^2.0.44"
stripe = "^10.12.0"
google-genai = "^0.1.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.3"
isort = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
